--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Portfolios -->
 				<article id="portfolios">
 					<h2 class="major">Portfolios</h2>
-					<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image main"><img src="images/pic02.png" alt="" /></span>
 					<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 				</article>
 
