--- a/pdf.js/web/viewer.html
+++ b/pdf.js/web/viewer.html
@@ -4,121 +4,126 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PDF.js Viewer</title>
+  <link rel="stylesheet" href="assets/css/viewer.css" />
 </head>
 <body>
+  <header>
+    <h1>PDF.js Viewer</h1>
+  </header>
+
   <!-- Sidebar Controls -->
   <section id="sidebar-controls">
-    <p>Thumbnails</p>
-    <p>Document Outline</p>
-    <p>Attachments</p>
-    <p>Layers</p>
-    <p>Current Outline Item</p>
-    <p>Toggle Sidebar</p>
+    <h2>Sidebar Controls</h2>
+    <ul>
+      <li>Thumbnails</li>
+      <li>Document Outline</li>
+      <li>Attachments</li>
+      <li>Layers</li>
+      <li>Current Outline Item</li>
+      <li>Toggle Sidebar</li>
+    </ul>
   </section>
 
   <!-- Search Controls -->
   <section id="search-controls">
-    <p>Find</p>
-    <p>Previous</p>
-    <p>Next</p>
-    <p>Highlight All</p>
-    <p>Match Case</p>
-    <p>Match Diacritics</p>
-    <p>Whole Words</p>
+    <h2>Search Controls</h2>
+    <ul>
+      <li>Find</li>
+      <li>Previous</li>
+      <li>Next</li>
+      <li>Highlight All</li>
+      <li>Match Case</li>
+      <li>Match Diacritics</li>
+      <li>Whole Words</li>
+    </ul>
   </section>
 
   <!-- Zoom Controls -->
   <section id="zoom-controls">
-    <p>Zoom Out</p>
-    <p>Zoom In</p>
-    <p>Automatic Zoom</p>
-    <p>Actual Size</p>
-    <p>Page Fit</p>
-    <p>Page Width</p>
-    <p>0% 50% 75% 100% 125% 150% 200% 300% 400%</p>
+    <h2>Zoom Controls</h2>
+    <ul>
+      <li>Zoom Out</li>
+      <li>Zoom In</li>
+      <li>Automatic Zoom</li>
+      <li>Actual Size</li>
+      <li>Page Fit</li>
+      <li>Page Width</li>
+      <li>Custom Zoom Levels</li>
+    </ul>
   </section>
 
   <!-- Annotation Tools -->
   <section id="annotation-tools">
-    <p>Highlight</p>
-    <p>Highlight Color</p>
-    <p>Thickness</p>
-    <p>Show All</p>
-    <p>Text</p>
-    <p>Color</p>
-    <p>Size</p>
-    <p>Draw</p>
-    <p>Color</p>
-    <p>Thickness</p>
-    <p>Opacity</p>
-    <p>Add or Edit Images</p>
-    <p>Add Image</p>
+    <h2>Annotation Tools</h2>
+    <ul>
+      <li>Highlight</li>
+      <li>Highlight Color</li>
+      <li>Thickness</li>
+      <li>Show All</li>
+      <li>Text Annotations</li>
+      <li>Draw</li>
+      <li>Opacity</li>
+      <li>Add or Edit Images</li>
+    </ul>
   </section>
 
   <!-- File Actions -->
   <section id="file-actions">
-    <p>Print</p>
-    <p>Save</p>
-    <p>Tools</p>
-    <p>Open</p>
-    <p>Presentation Mode</p>
-    <a href="#">Current Page</a>
-    <p>Go to First Page</p>
-    <p>Go to Last Page</p>
-    <p>Rotate Clockwise</p>
-    <p>Rotate Counterclockwise</p>
+    <h2>File Actions</h2>
+    <ul>
+      <li>Print</li>
+      <li>Save</li>
+      <li>Open</li>
+      <li>Presentation Mode</li>
+      <li>Navigation Options</li>
+    </ul>
   </section>
 
   <!-- Viewing Modes -->
   <section id="viewing-modes">
-    <p>Text Selection Tool</p>
-    <p>Hand Tool</p>
-    <p>Vertical Scrolling</p>
-    <p>Horizontal Scrolling</p>
-    <p>Wrapped Scrolling</p>
-    <p>No Spreads</p>
-    <p>Odd Spreads</p>
-    <p>Even Spreads</p>
+    <h2>Viewing Modes</h2>
+    <ul>
+      <li>Text Selection Tool</li>
+      <li>Hand Tool</li>
+      <li>Scrolling Modes</li>
+      <li>Spread Modes</li>
+    </ul>
   </section>
 
   <!-- Document Properties -->
   <section id="document-properties">
-    <p>File Name: -</p>
-    <p>File Size: -</p>
-    <p>Title: -</p>
-    <p>Author: -</p>
-    <p>Subject: -</p>
-    <p>Keywords: -</p>
-    <p>Creation Date: -</p>
-    <p>Modification Date: -</p>
-    <p>Creator: -</p>
-    <p>PDF Producer: -</p>
-    <p>PDF Version: -</p>
-    <p>Page Count: -</p>
-    <p>Page Size: -</p>
-    <p>Fast Web View: -</p>
-    <p>Close</p>
+    <h2>Document Properties</h2>
+    <ul>
+      <li>File Name</li>
+      <li>File Size</li>
+      <li>Metadata</li>
+      <li>Page Count</li>
+      <li>PDF Version</li>
+    </ul>
   </section>
 
   <!-- Alt Text Settings -->
   <section id="alt-text-settings">
-    <p>Alt Text Editor</p>
-    <p>Add a Description</p>
-    <p>Aim for 1-2 sentences to describe the image.</p>
-    <p>Mark as Decorative</p>
-    <p>Automatic Alt Text</p>
-    <p>Create Alt Text Automatically</p>
-    <p>Download Alt Text AI Model</p>
-    <p>Delete Download</p>
-    <p>Show Alt Text Editor Automatically</p>
-    <p>Close</p>
+    <h2>Alt Text Settings</h2>
+    <ul>
+      <li>Alt Text Editor</li>
+      <li>Add a Description</li>
+      <li>Mark as Decorative</li>
+      <li>Automatic Alt Text</li>
+    </ul>
   </section>
 
   <!-- Printing -->
   <section id="printing">
+    <h2>Printing</h2>
     <p>Preparing Document for Printing...</p>
-    <p>0%</p>
-    <p>Cancel</p>
   </section>
+
+  <!-- PDF Viewer Embed -->
+  <iframe src="path-to-pdf-viewer.html" title="PDF Viewer" width="100%" height="600px"></iframe>
+
+  <footer>
+    <p>&copy; 2024 Shmooniverse</p>
+  </footer>
 </body>
 </html>
