--- a/index.html
+++ b/index.html
@@ -37,14 +37,34 @@
 				<article id="home">
 					<h2 class="major">Home</h2>
 					<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-					<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#portfolios">awesome work</a>.</p>
+					<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. By the way, check out my <a href="#portfolios">awesome work</a>.</p>
 				</article>
 
 				<!-- Portfolios -->
 				<article id="portfolios">
 					<h2 class="major">Portfolios</h2>
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
-					<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+					<p>Browse my portfolios below. Click any to view in full screen.</p>
+					<div class="portfolio-grid">
+						<div class="portfolio-item">
+							<a href="viewer.html?file=portfolios/portfolio1.pdf" target="_blank">
+								<img src="images/portfolio1-thumb.jpg" alt="Portfolio 1" />
+								<p>Portfolio 1</p>
+							</a>
+						</div>
+						<div class="portfolio-item">
+							<a href="viewer.html?file=portfolios/portfolio2.pdf" target="_blank">
+								<img src="images/portfolio2-thumb.jpg" alt="Portfolio 2" />
+								<p>Portfolio 2</p>
+							</a>
+						</div>
+						<div class="portfolio-item">
+							<a href="viewer.html?file=portfolios/portfolio3.pdf" target="_blank">
+								<img src="images/portfolio3-thumb.jpg" alt="Portfolio 3" />
+								<p>Portfolio 3</p>
+							</a>
+						</div>
+					</div>
 				</article>
 
 				<!-- About Me -->
@@ -57,8 +77,9 @@
 			</div>
 
 			<!-- Footer -->
-			<footer id="footer"></footer>
-			
+			<footer id="footer">
+				<p>&copy; 2024 Shmooniverse</p>
+			</footer>
 		</div>
 
 		<!-- BG -->
