--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
 								<p>Portfolio 3</p>
 							</a>
 						</div>
+						<div class="portfolio-item">
+							<a href="viewer.html?file=portfolios/portfolio4.pdf" target="_blank">
+								<img src="images/portfolio4-thumb.jpg" alt="Portfolio 4" />
+								<p>Portfolio 4</p>
+							</a>
+						</div>
+						<div class="portfolio-item">
+							<a href="viewer.html?file=portfolios/portfolio5.pdf" target="_blank">
+								<img src="images/portfolio5-thumb.jpg" alt="Portfolio 5" />
+								<p>Portfolio 5</p>
+							</a>
+						</div>
+						<div class="portfolio-item">
+							<a href="viewer.html?file=portfolios/portfolio6.pdf" target="_blank">
+								<img src="images/portfolio6-thumb.jpg" alt="Portfolio 6" />
+								<p>Portfolio 6</p>
+							</a>
+						</div>
 					</div>
 				</article>
 
