--- a/index.html
+++ b/index.html
@@ -44,41 +44,34 @@
 				<article id="portfolios">
 					<h2 class="major">Portfolios</h2>
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
-					<p>Browse my portfolios below. Click any to view in full screen.</p>
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/portfolio1.pdf" target="_blank">
-								<img src="images/portfolio1-thumb.jpg" alt="Portfolio 1" />
+							<a href="viewer.html?file=portfolios/portfolio#1.pdf" target="_blank">
 								<p>Portfolio 1</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/portfolio2.pdf" target="_blank">
-								<img src="images/portfolio2-thumb.jpg" alt="Portfolio 2" />
+							<a href="viewer.html?file=portfolios/portfolio#2.pdf" target="_blank">
 								<p>Portfolio 2</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/portfolio3.pdf" target="_blank">
-								<img src="images/portfolio3-thumb.jpg" alt="Portfolio 3" />
+							<a href="viewer.html?file=portfolios/portfolio#3.pdf" target="_blank">
 								<p>Portfolio 3</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/portfolio4.pdf" target="_blank">
-								<img src="images/portfolio4-thumb.jpg" alt="Portfolio 4" />
+							<a href="viewer.html?file=portfolios/portfolio#4.pdf" target="_blank">
 								<p>Portfolio 4</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/portfolio5.pdf" target="_blank">
-								<img src="images/portfolio5-thumb.jpg" alt="Portfolio 5" />
+							<a href="viewer.html?file=portfolios/portfolio#5.pdf" target="_blank">
 								<p>Portfolio 5</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/portfolio6.pdf" target="_blank">
-								<img src="images/portfolio6-thumb.jpg" alt="Portfolio 6" />
+							<a href="viewer.html?file=portfolios/portfolio#6.pdf" target="_blank">
 								<p>Portfolio 6</p>
 							</a>
 						</div>
