--- a/index.html
+++ b/index.html
@@ -46,32 +46,32 @@
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/Portfolio#1.pdf" target="_blank">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#1.pdf">View Portfolio 1</a>
 								<p>Portfolio 1</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/Portfolio#2.pdf" target="_blank">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#2.pdf">View Portfolio 2</a>
 								<p>Portfolio 2</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/Portfolio#3.pdf" target="_blank">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#3.pdf">View Portfolio 3</a>
 								<p>Portfolio 3</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/Portfolio#4.pdf" target="_blank">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#4.pdf">View Portfolio 4</a>
 								<p>Portfolio 4</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/Portfolio#5.pdf" target="_blank">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#5.pdf">View Portfolio 5</a>
 								<p>Portfolio 5</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="viewer.html?file=portfolios/Portfolio#6.pdf" target="_blank">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#6.pdf">View Portfolio 6</a>
 								<p>Portfolio 6</p>
 							</a>
 						</div>
