--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
-							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#1.pdf">View Portfolio 1</a>
+							<a href="https://github.com/shmoonly/Website/blob/main/portfolios/Portfolio%231.pdf">View Portfolio 1</a>
 								<p>Portfolio 1</p>
 							</a>
 						</div>
