--- a/index.html
+++ b/index.html
@@ -46,28 +46,34 @@
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
-							<iframe src="file:///C:/Users/Wayne/AppData/Local/Temp/Portfolio%231.pdf"></iframe>
-							<p>Portfolio 1</p>
+							<a href="https://github.com/shmoonly/Website/blob/main/portfolios/Portfolio#1.pdf">View Portfolio 1</a>
+								<p>Portfolio 1</p>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<iframe src="portfolios/Portfolio2.pdf" width="100%" height="500px"></iframe>
-							<p>Portfolio 2</p>
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#2.pdf">View Portfolio 2</a>
+								<p>Portfolio 2</p>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<iframe src="portfolios/Portfolio3.pdf" width="100%" height="500px"></iframe>
-							<p>Portfolio 3</p>
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#3.pdf">View Portfolio 3</a>
+								<p>Portfolio 3</p>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<iframe src="portfolios/Portfolio4.pdf" width="100%" height="500px"></iframe>
-							<p>Portfolio 4</p>
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#4.pdf">View Portfolio 4</a>
+								<p>Portfolio 4</p>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<iframe src="portfolios/Portfolio5.pdf" width="100%" height="500px"></iframe>
-							<p>Portfolio 5</p>
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#5.pdf">View Portfolio 5</a>
+								<p>Portfolio 5</p>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<iframe src="portfolios/Portfolio6.pdf" width="100%" height="500px"></iframe>
-							<p>Portfolio 6</p>
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#6.pdf">View Portfolio 6</a>
+								<p>Portfolio 6</p>
+							</a>
 						</div>
 					</div>
 				</article>
