--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
-							<object data="https://github.com/shmoonly/Website/blob/main/portfolios/Portfolio%231.pdf" type="application/pdf" width="100%" height="500px">
+							<object data="https://github.com/shmoonly/Website/blob/main/portfolios/Portfolio#1.pdf" type="application/pdf" width="100%" height="500px">
 								<p>Portfolio 1</p>
 							</object>
 						</div>
