--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
 							<object data="https://github.com/shmoonly/Website/blob/main/portfolios/Portfolio#1.pdf" type="application/pdf" width="100%" height="500px">
-								<p>Portfolio 1</p>
+								<p>Nigga 1</p>
 							</object>
 						</div>
 						<div class="portfolio-item">
