--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
 							<object data="https://drive.google.com/file/d/1Pxc8He-idX9Ddit8l0lI4vDsCdDTPn8-/view?usp=drive_link" type="application/pdf" width="100%" height="500px">
-								<p>Nigga 1</p>
+								<p>Portfolio 1</p>
 							</object>
 						</div>
 						<div class="portfolio-item">
