--- a/index.html
+++ b/index.html
@@ -46,34 +46,34 @@
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
-							<object data="https://drive.google.com/file/d/1Pxc8He-idX9Ddit8l0lI4vDsCdDTPn8-/view?usp=drive_link" type="application/pdf" width="100%" height="500px">
+							<a href="https://drive.google.com/file/d/1Pxc8He-idX9Ddit8l0lI4vDsCdDTPn8-/view?usp=drive_link">View Portfolio 1</a>
 								<p>Portfolio 1</p>
-							</object>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<object data="portfolios/Portfolio2.pdf" type="application/pdf" width="100%" height="500px">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#2.pdf">View Portfolio 2</a>
 								<p>Portfolio 2</p>
-							</object>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<object data="portfolios/Portfolio3.pdf" type="application/pdf" width="100%" height="500px">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#3.pdf">View Portfolio 3</a>
 								<p>Portfolio 3</p>
-							</object>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<object data="portfolios/Portfolio4.pdf" type="application/pdf" width="100%" height="500px">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#4.pdf">View Portfolio 4</a>
 								<p>Portfolio 4</p>
-							</object>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<object data="portfolios/Portfolio5.pdf" type="application/pdf" width="100%" height="500px">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#5.pdf">View Portfolio 5</a>
 								<p>Portfolio 5</p>
-							</object>
+							</a>
 						</div>
 						<div class="portfolio-item">
-							<object data="portfolios/Portfolio6.pdf" type="application/pdf" width="100%" height="500px">
+							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#6.pdf">View Portfolio 6</a>
 								<p>Portfolio 6</p>
-							</object>
+							</a>
 						</div>
 					</div>
 				</article>
