--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			.portfolio-item a {
+				color: blue; /* Set text color to blue */
+				text-decoration: none; /* Optional: remove underline from the link */
+			}
+
+			/* Optional: change color on hover */
+			.portfolio-item a:hover {
+				color: darkblue; /* Change text color when hovered */
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -46,33 +57,27 @@
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1Pxc8He-idX9Ddit8l0lI4vDsCdDTPn8-/view?usp=drive_link">View Portfolio 1</a>
-								<p>Portfolio 1</p>
+							<a href="https://drive.google.com/file/d/1Pxc8He-idX9Ddit8l0lI4vDsCdDTPn8-/view?usp=drive_link" target="_blank">View Portfolio 1</a>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#2.pdf">View Portfolio 2</a>
-								<p>Portfolio 2</p>
+							<a href="https://drive.google.com/file/d/1Ix3Y90CKIY83pXFVtGgYwEEwWqSttD90/view?usp=drive_link" target="_blank">View Portfolio 2</a>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#3.pdf">View Portfolio 3</a>
-								<p>Portfolio 3</p>
+							<a href="https://drive.google.com/file/d/1lBKvg5egXuci6Iz1PZ00-YFpCAhVOEir/view?usp=drive_link" target="_blank">View Portfolio 3</a>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#4.pdf">View Portfolio 4</a>
-								<p>Portfolio 4</p>
+							<a href="https://drive.google.com/file/d/1CXweZkJYFyZvSplwzu9TV2C21Iq4Dn-Z/view?usp=drive_link" target="_blank">View Portfolio 4</a>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#5.pdf">View Portfolio 5</a>
-								<p>Portfolio 5</p>
+							<a href="https://drive.google.com/file/d/1lNxgHKYzQVo-jrVn0C-paiQBTdLQ-p3y/view?usp=drive_link" target="_blank">View Portfolio 5</a>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="pdfjs/web/viewer.html?file=portfolios/Portfolio#6.pdf">View Portfolio 6</a>
-								<p>Portfolio 6</p>
+							<a href="https://drive.google.com/file/d/1TUQRxIsLaEUp5aPA9MbUKFdXMEk7zubt/view?usp=drive_link" target="_blank">View Portfolio 6</a>
 							</a>
 						</div>
 					</div>
