--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
 			.portfolio-item a {
-				color: blue; /* Set text color to blue */
+				color: lightblue; /* Set text color to blue */
 				text-decoration: none; /* Optional: remove underline from the link */
 			}
 
 			/* Optional: change color on hover */
 			.portfolio-item a:hover {
-				color: darkblue; /* Change text color when hovered */
+				color: blue; /* Change text color when hovered */
 			}
 		</style>
 	</head>
@@ -58,26 +58,32 @@
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1Pxc8He-idX9Ddit8l0lI4vDsCdDTPn8-/view?usp=drive_link" target="_blank">View Portfolio 1</a>
+							<p>Portfolio 6</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1Ix3Y90CKIY83pXFVtGgYwEEwWqSttD90/view?usp=drive_link" target="_blank">View Portfolio 2</a>
+							<p>Portfolio 6</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1lBKvg5egXuci6Iz1PZ00-YFpCAhVOEir/view?usp=drive_link" target="_blank">View Portfolio 3</a>
+							<p>This is about blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1CXweZkJYFyZvSplwzu9TV2C21Iq4Dn-Z/view?usp=drive_link" target="_blank">View Portfolio 4</a>
+							<p>Portfolio 6</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1lNxgHKYzQVo-jrVn0C-paiQBTdLQ-p3y/view?usp=drive_link" target="_blank">View Portfolio 5</a>
+							<p>Portfolio 6</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1TUQRxIsLaEUp5aPA9MbUKFdXMEk7zubt/view?usp=drive_link" target="_blank">View Portfolio 6</a>
+							<p>This is about blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
 							</a>
 						</div>
 					</div>
