--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
 			.portfolio-item a {
-				color: lightblue; /* Set text color to blue */
-				text-decoration: none; /* Optional: remove underline from the link */
+				color: lightblue; 
+				text-decoration: none;
 			}
 
-			/* Optional: change color on hover */
 			.portfolio-item a:hover {
-				color: blue; /* Change text color when hovered */
+				color: blue; 
 			}
 		</style>
 	</head>
@@ -57,33 +55,33 @@
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1Pxc8He-idX9Ddit8l0lI4vDsCdDTPn8-/view?usp=drive_link" target="_blank">View Portfolio 1</a>
-							<p>Portfolio 6</p>
+							<a href="https://drive.google.com/file/d/1Pxc8He-idX9Ddit8l0lI4vDsCdDTPn8-/view?usp=drive_link" target="_blank">Computer Science as a Discipline</a>
+							<p>Portfolio 1</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1Ix3Y90CKIY83pXFVtGgYwEEwWqSttD90/view?usp=drive_link" target="_blank">View Portfolio 2</a>
-							<p>Portfolio 6</p>
+							<a href="https://drive.google.com/file/d/1Ix3Y90CKIY83pXFVtGgYwEEwWqSttD90/view?usp=drive_link" target="_blank">Data and Information</a>
+							<p>Portfolio 2</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1lBKvg5egXuci6Iz1PZ00-YFpCAhVOEir/view?usp=drive_link" target="_blank">View Portfolio 3</a>
-							<p>This is about blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
+							<a href="https://drive.google.com/file/d/1lBKvg5egXuci6Iz1PZ00-YFpCAhVOEir/view?usp=drive_link" target="_blank">Number Systems</a>
+							<p>Portfolio 3</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1CXweZkJYFyZvSplwzu9TV2C21Iq4Dn-Z/view?usp=drive_link" target="_blank">View Portfolio 4</a>
-							<p>Portfolio 6</p>
+							<a href="https://drive.google.com/file/d/1CXweZkJYFyZvSplwzu9TV2C21Iq4Dn-Z/view?usp=drive_link" target="_blank">Portfolio#4 - Computer Hardware and Software: Their Implementation in the different institutions in the community </a>
+							<p>Portfolio 4</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1lNxgHKYzQVo-jrVn0C-paiQBTdLQ-p3y/view?usp=drive_link" target="_blank">View Portfolio 5</a>
-							<p>Portfolio 6</p>
+							<a href="https://drive.google.com/file/d/1lNxgHKYzQVo-jrVn0C-paiQBTdLQ-p3y/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Motherboards</a>
+							<p>Portfolio 5</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1TUQRxIsLaEUp5aPA9MbUKFdXMEk7zubt/view?usp=drive_link" target="_blank">View Portfolio 6</a>
-							<p>This is about blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
+							<a href="https://drive.google.com/file/d/1TUQRxIsLaEUp5aPA9MbUKFdXMEk7zubt/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Computers</a>
+							<p>TPortfolio 6</p>
 							</a>
 						</div>
 					</div>
