--- a/index.html
+++ b/index.html
@@ -55,33 +55,33 @@
 					<span class="image main"><img src="images/pic02.png" alt="" /></span>
 					<div class="portfolio-grid">
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1Pxc8He-idX9Ddit8l0lI4vDsCdDTPn8-/view?usp=drive_link" target="_blank">Computer Science as a Discipline</a>
+							<a href="https://drive.google.com/file/d/1O-UvEFdP9skiX4qGg8UB81eR5P84i9vo/view?usp=drive_link" target="_blank">Computer Science as a Discipline</a>
 							<p>Portfolio 1</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1Ix3Y90CKIY83pXFVtGgYwEEwWqSttD90/view?usp=drive_link" target="_blank">Data and Information</a>
+							<a href="https://drive.google.com/file/d/1UGwih0qpv3LxWFi9F8lVP2XUHNX88c8h/view?usp=drive_link" target="_blank">Data and Information</a>
 							<p>Portfolio 2</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1lBKvg5egXuci6Iz1PZ00-YFpCAhVOEir/view?usp=drive_link" target="_blank">Number Systems</a>
+							<a href="https://drive.google.com/file/d/1IYX4sbyS0xqtIlIJOOf4IAfSl7rReJCI/view?usp=drive_link" target="_blank">Number Systems</a>
 							<p>Portfolio 3</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1CXweZkJYFyZvSplwzu9TV2C21Iq4Dn-Z/view?usp=drive_link" target="_blank">Portfolio#4 - Computer Hardware and Software: Their Implementation in the different institutions in the community </a>
+							<a href="https://drive.google.com/file/d/1Bp91x2UxCBjKQ86kdEm5Rbn9YVoFIbH4/view?usp=drive_link" target="_blank">Portfolio#4 - Computer Hardware and Software: Their Implementation in the different institutions in the community </a>
 							<p>Portfolio 4</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1lNxgHKYzQVo-jrVn0C-paiQBTdLQ-p3y/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Motherboards</a>
+							<a href="https://drive.google.com/file/d/1ttu4E-gEKbKFfBjx-gy1iVp1znYBp4if/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Motherboards</a>
 							<p>Portfolio 5</p>
 							</a>
 						</div>
 						<div class="portfolio-item">
-							<a href="https://drive.google.com/file/d/1TUQRxIsLaEUp5aPA9MbUKFdXMEk7zubt/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Computers</a>
-							<p>TPortfolio 6</p>
+							<a href="https://drive.google.com/file/d/1soUtv1kz4_C7asYamX3RaRBY10xa6mZt/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Computers</a>
+							<p>Portfolio 6</p>
 							</a>
 						</div>
 					</div>
