--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<article id="home">
 					<h2 class="major">Home</h2>
 					<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-					<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. By the way, check out my <a href="#portfolios">awesome work</a>.</p>
+					<p>Bruh.</p>
 				</article>
 
 				<!-- Portfolios -->
@@ -91,7 +91,7 @@
 				<article id="aboutme">
 					<h2 class="major">About Me</h2>
 					<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-					<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam.</p>
+					<p>Bruh.</p>
 				</article>
 
 			</div>
