--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="content">
 					<div class="inner">
 						<h1>Shmooniverse</h1>
-						<p>A website made by Shmoon.</p>
+						<p>"Where creativity meets the cosmos."</p>
 					</div>
 				</div>
 				<nav>
