--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 				<article id="home">
 					<h2 class="major">Home</h2>
 					<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-					<p>Bruh.</p>
+					<p>Welcome to Shmooniverse, your gateway to exploring my journey in the universe of IT. This site serves as a digital portfolio showcasing my projects, skills, and progress as a BSIT student.</p>
+					<h3>Purpose</h3>
+					<p>The purpose of this website is not only to share my work but also to inspire and connect with like-minded individuals who are passionate about technology and creativity. Whether you're a fellow IT enthusiast, a potential collaborator, or simply curious, there's something here for everyone.</p>
 				</article>
 
 				<!-- Portfolios -->
@@ -57,32 +59,26 @@
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1O-UvEFdP9skiX4qGg8UB81eR5P84i9vo/view?usp=drive_link" target="_blank">Computer Science as a Discipline</a>
 							<p>Portfolio 1</p>
-							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1UGwih0qpv3LxWFi9F8lVP2XUHNX88c8h/view?usp=drive_link" target="_blank">Data and Information</a>
 							<p>Portfolio 2</p>
-							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1IYX4sbyS0xqtIlIJOOf4IAfSl7rReJCI/view?usp=drive_link" target="_blank">Number Systems</a>
 							<p>Portfolio 3</p>
-							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1Bp91x2UxCBjKQ86kdEm5Rbn9YVoFIbH4/view?usp=drive_link" target="_blank">Computer Hardware and Software</a>
 							<p>Portfolio 4</p>
-							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1ttu4E-gEKbKFfBjx-gy1iVp1znYBp4if/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Motherboards</a>
 							<p>Portfolio 5</p>
-							</a>
 						</div>
 						<div class="portfolio-item">
 							<a href="https://drive.google.com/file/d/1soUtv1kz4_C7asYamX3RaRBY10xa6mZt/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Computers</a>
 							<p>Portfolio 6</p>
-							</a>
 						</div>
 					</div>
 				</article>
@@ -91,7 +87,18 @@
 				<article id="aboutme">
 					<h2 class="major">About Me</h2>
 					<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-					<p>Bruh.</p>
+					<p>Hi, I'm Wayne Czar A. Ricaplaza, a passionate student currently pursuing a Bachelor of Science in Information Technology. I'm deeply fascinated by the world of technology and how it is shaping the future of our world.</p>
+					<p>My journey into IT began with an interest in space and technology. I created Shmooniverse to reflect both my enthusiasm for IT and my love for the cosmos. It's a space where creativity meets innovation, and I aim to share that with the world.</p>
+
+					<h3>Inspirations</h3>
+					<ul>
+						<li><strong>Space and the Universe:</strong> The boundless beauty and mystery of the cosmos inspire me to think beyond limits.</li>
+						<li><strong>Technology:</strong> The constant evolution of IT motivates me to learn and grow.</li>
+						<li><strong>Problem Solving:</strong> I enjoy tackling challenges and finding solutions that make a difference.</li>
+					</ul>
+
+					<h3>A Little More About Me</h3>
+					<p>When I'm not working on IT projects, I explore new tech trends, learn about different cultures, and experiment with creative designs. My goal is to continuously improve my skills and contribute meaningfully to the IT field.</p>
 				</article>
 
 			</div>
