--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Shmooniverse</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <style>
-        /* Portfolio links */
         .portfolio-item a {
             color: lightblue;
             text-decoration: none;
@@ -17,14 +16,21 @@
             color: blue;
         }
 
-        /* Image styling */
         .image.main img {
             width: 100%;
             height: auto;
             border-radius: 8px;
         }
 
-        /* Section padding for better spacing */
+        body,
+        p,
+        ul,
+        li,
+        h2.major,
+        h3 {
+            color: white; 
+        }
+
         article {
             margin-bottom: 40px;
         }
@@ -32,19 +38,16 @@
         h2.major {
             font-size: 2.5rem;
             margin-bottom: 20px;
-            color: #2d2d2d;
         }
 
         h3 {
             font-size: 1.8rem;
             margin-top: 20px;
-            color: #333;
         }
 
         p {
             font-size: 1rem;
             line-height: 1.6;
-            color: #555;
         }
 
         ul {
@@ -147,8 +150,8 @@
 
         <!-- Footer -->
         <footer id="footer">
-            <!-- Footer content goes here -->
         </footer>
+        
     </div>
 
     <!-- Background -->
