--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <!-- About Me Section -->
             <article id="aboutme">
                 <h2 class="major">About Me</h2>
-                <span class="image main"><img src="images/pfp.png" alt="About Me Image" /></span>
+                <span class="image main"><img src="images/pfp.jpg" alt="About Me Image" /></span>
                 <p>Hi, I'm Wayne Czar A. Ricaplaza, a passionate student currently pursuing a Bachelor of Science in Information Technology. I'm deeply fascinated by the world of technology and how it is shaping the future of our world.</p>
                 <p>My journey into IT began with an interest in space and technology. I created Shmooniverse to reflect both my enthusiasm for IT and my love for the cosmos. It's a space where creativity meets innovation, and I aim to share that with the world.</p>
 
