--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>Shmooniverse</title>
+    <title>Shmoonly</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <style>
         .portfolio-item a {
@@ -71,8 +71,8 @@
             <div></div>
             <div class="content">
                 <div class="inner">
-                    <h1>Shmooniverse</h1>
-                    <p>"Where creativity meets the cosmos."</p>
+                    <h1>Shmoonly</h1>
+                    <p>"I like this starry sky."</p>
                 </div>
             </div>
             <nav>
