--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
             <article id="home">
                 <h2 class="major">Home</h2>
                 <span class="image main"><img src="images/pic01.jpg" alt="Home Image" /></span>
-                <p>Welcome to Shmooniverse, your gateway to exploring my journey in the universe of IT. This site serves as a digital portfolio showcasing my projects, skills, and progress as a BSIT student.</p>
-                <h3>Purpose</h3>
-                <p>The purpose of this website is not only to share my work but also to inspire and connect with like-minded individuals who are passionate about technology and creativity. Whether you're a fellow IT enthusiast, a potential collaborator, or simply curious, there's something here for everyone.</p>
+                <p>Hello there, I made this website to document my journey in IT. This site serves as a digital portfolio showcasing my projects, skills, and progress as a BSIT student.</p>
+                <!--<h3>Purpose</h3>
+                <p>The purpose of this website is not only to share my work but also to inspire and connect with like-minded individuals who are passionate about technology and creativity. Whether you're a fellow IT enthusiast, a potential collaborator, or simply curious, there's something here for everyone.</p> -->
             </article>
 
             <!-- Portfolios Section -->
             <article id="portfolios">
                 <h2 class="major">Portfolios</h2>
-                <span class="image main"><img src="images/pic02.png" alt="Portfolio Image" /></span>
+                <!-- <span class="image main"><img src="images/pic02.png" alt="Portfolio Image" /></span> -->
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
                         <a href="https://drive.google.com/file/d/1O-UvEFdP9skiX4qGg8UB81eR5P84i9vo/view?usp=drive_link" target="_blank">Computer Science as a Discipline</a>
@@ -131,9 +131,9 @@
             <!-- About Me Section -->
             <article id="aboutme">
                 <h2 class="major">About Me</h2>
-                <span class="image main"><img src="images/pfp.jpg" alt="About Me Image" /></span>
-                <p>Hi, I'm Wayne Czar A. Ricaplaza, a passionate student currently pursuing a Bachelor of Science in Information Technology. I'm deeply fascinated by the world of technology and how it is shaping the future of our world.</p>
-                <p>My journey into IT began with an interest in space and technology. I created Shmooniverse to reflect both my enthusiasm for IT and my love for the cosmos. It's a space where creativity meets innovation, and I aim to share that with the world.</p>
+                <!-- <span class="image main"><img src="images/pfp.jpg" alt="About Me Image" /></span> -->
+                <p>Hi, I'm Wayne, a passionate student currently pursuing a Bachelor of Science in Information Technology. I'm deeply fascinated by the world of technology and how it is shaping the future of our world.</p>
+                <p>My journey into IT began with an interest in space and technology. I created this website to reflect both my enthusiasm for IT and my progress in it.</p>
 
                 <h3>Inspirations</h3>
                 <ul>
