--- a/index.html
+++ b/index.html
@@ -155,30 +155,30 @@
             <!-- Portfolios Section -->
             <article id="portfolios">
                 <h2 class="major">Portfolios</h2>
-                <!-- <span class="image main"><img src="images/pic02.png" alt="Portfolio Image" /></span> -->
+                <!-- <span class="image main"><img src="images" alt="Portfolio Image" /></span> -->
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
-                        <a href="https://drive.google.com/file/d/1O-UvEFdP9skiX4qGg8UB81eR5P84i9vo/view?usp=drive_link" target="_blank">Computer Science as a Discipline</a>
+                        <a href="https://youtu.be/dQw4w9WgXcQ?si=GSkmpgysDM1HKCfA" target="_blank">Computer Science as a Discipline</a>
                         <p>Portfolio 1</p>
                     </div>
                     <div class="portfolio-item">
-                        <a href="https://drive.google.com/file/d/1UGwih0qpv3LxWFi9F8lVP2XUHNX88c8h/view?usp=drive_link" target="_blank">Data and Information</a>
+                        <a href="https://youtu.be/dQw4w9WgXcQ?si=GSkmpgysDM1HKCfA" target="_blank">Data and Information</a>
                         <p>Portfolio 2</p>
                     </div>
                     <div class="portfolio-item">
-                        <a href="https://drive.google.com/file/d/1IYX4sbyS0xqtIlIJOOf4IAfSl7rReJCI/view?usp=drive_link" target="_blank">Number Systems</a>
+                        <a href="https://youtu.be/dQw4w9WgXcQ?si=GSkmpgysDM1HKCfA" target="_blank">Number Systems</a>
                         <p>Portfolio 3</p>
                     </div>
                     <div class="portfolio-item">
-                        <a href="https://drive.google.com/file/d/1Bp91x2UxCBjKQ86kdEm5Rbn9YVoFIbH4/view?usp=drive_link" target="_blank">Computer Hardware and Software</a>
+                        <a href="https://youtu.be/dQw4w9WgXcQ?si=GSkmpgysDM1HKCfA" target="_blank">Computer Hardware and Software</a>
                         <p>Portfolio 4</p>
                     </div>
                     <div class="portfolio-item">
-                        <a href="https://drive.google.com/file/d/1ttu4E-gEKbKFfBjx-gy1iVp1znYBp4if/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Motherboards</a>
+                        <a href="https://youtu.be/dQw4w9WgXcQ?si=GSkmpgysDM1HKCfA" target="_blank">Comparative Study on Different Types of Motherboards</a>
                         <p>Portfolio 5</p>
                     </div>
                     <div class="portfolio-item">
-                        <a href="https://drive.google.com/file/d/1soUtv1kz4_C7asYamX3RaRBY10xa6mZt/view?usp=drive_link" target="_blank">Comparative Study on Different Types of Computers</a>
+                        <a href="https://youtu.be/dQw4w9WgXcQ?si=GSkmpgysDM1HKCfA" target="_blank">Comparative Study on Different Types of Computers</a>
                         <p>Portfolio 6</p>
                     </div>
                 </div>
@@ -187,16 +187,9 @@
             <!-- About Me Section -->
             <article id="aboutme">
                 <h2 class="major">About Me</h2>
-                <!-- <span class="image main"><img src="images/pfp.jpg" alt="About Me Image" /></span> -->
+                <!-- <span class="image main"><img src="images/" alt="About Me Image" /></span> -->
                 <p>Hi, I'm Wayne, a passionate student currently pursuing a Bachelor of Science in Information Technology. I'm deeply fascinated by the world of technology and how it is shaping the future of our world.</p>
                 <p>My journey into IT began with an interest in space and technology. I created this website to reflect both my enthusiasm for IT and my progress in it.</p>
-
-                <h3>Inspirations</h3>
-                <ul>
-                    <li><strong>Space and the Universe:</strong> The boundless beauty and mystery of the cosmos inspire me to think beyond limits.</li>
-                    <li><strong>Technology:</strong> The constant evolution of IT motivates me to learn and grow.</li>
-                    <li><strong>Problem Solving:</strong> I enjoy tackling challenges and finding solutions that make a difference.</li>
-                </ul>
 
                 <h3>A Little More About Me</h3>
                 <p>When I'm not working on IT projects, I explore new tech trends, learn about different cultures, and experiment with creative designs. My goal is to continuously improve my skills and contribute meaningfully to the IT field.</p>
